# stm32f1xx-hal

./: .travis.yml  CHANGELOG.md  Cargo.toml  README.md  build.rs
.cargo/: config  config.toml
.github/: bors.toml  pull_request_template.md
.github/workflows/: changelog.yml  ci.yml  clippy.yml  rustfmt.yml
.zed/: settings.json
examples/: adc-dma-circ.rs  adc-dma-rx.rs  adc.rs  adc_temperature.rs  blinky.rs  blinky_generic.rs  blinky_rtc.rs  blinky_rtcalarm_irq.rs  blinky_timer_irq.rs  can-echo.rs  can-loopback.rs  can-rtfm.rs  can-rtic.rs  crc.rs  dac.rs  delay-timer-blinky.rs  delay.rs  dynamic_gpio.rs  enc28j60-coap.rs.disabled  enc28j60.rs  enc28j60.rs.disabled  exti.rs  exti_rtic.rs  flash_writer.rs  gpio_input.rs  hello.rs  i2c-bme280.rs  i2c_scanner.rs  input_gpio.rs  interrupt-rtc.rs  interrupt-tim2.rs  itm.rs  led.rs  mfrc522.rs  mfrc522.rs.disabled  motor.rs  motor.rs.disabled  mpu9250.rs  mpu9250.rs.disabled  multi_mode_gpio.rs  (+34 more)
examples/i2c-bme280/: Cargo.toml
examples/i2c-bme280/src/: main.rs
src/: adc.rs  afio.rs  backup_domain.rs  bb.rs  can.rs  crc.rs  dac.rs  delay.rs  dma.rs  flash.rs  gpio.rs  i2c.rs  lib.rs  pacext.rs  prelude.rs  pwm.rs  pwm_input.rs  qei.rs  rcc.rs  rng.rs  rtc.rs  serial.rs  spi.rs  time.rs  timer.rs  usb.rs  utils.rs  watchdog.rs
src/adc/: dma.rs
src/gpio/: erased.rs  hal_02.rs  hal_1.rs  partially_erased.rs
src/i2c/: blocking.rs  common.rs  hal_02.rs  hal_1.rs
src/pacext/: adc.rs  uart.rs
src/rcc/: enable.rs
src/serial/: config.rs  dma.rs  ext.rs  hal_02.rs  hal_1.rs  rbext.rs
src/spi/: dma.rs  hal_02.rs  hal_1.rs
src/timer/: capture.rs  counter.rs  delay.rs  hal_02.rs  hal_1.rs  monotonic.rs  monotonics.rs  pins.rs  pwm.rs  pwm_input.rs
tools/: check.py
