[package]
edition = "2021"
rust-version = "1.59"

authors = ["Jorge Aparicio <jorge@japaric.io>", "Daniel Egger <daniel@eggers-club.de>"]
categories = ["embedded", "hardware-support", "no-std"]
description = "HAL for the STM32F1xx family of microcontrollers"
keywords = ["arm", "cortex-m", "stm32", "hal"]
license = "MIT OR Apache-2.0"
name = "stm32f1xx-hal"
repository = "https://github.com/stm32-rs/stm32f1xx-hal"
documentation = "https://docs.rs/stm32f1xx-hal"
readme = "README.md"
version = "0.10.0"

[package.metadata.docs.rs]
features = ["stm32f103", "rtic", "high"]
default-target = "x86_64-unknown-linux-gnu"

[dependencies]
cortex-m = "0.7.6"
cortex-m-rt = "0.7.1"
nb = "1"
stm32f1 = "0.15.1"
embedded-dma = "0.2.0"
bxcan = "0.7"
void = { default-features = false, version = "1.0.2" }
embedded-hal = { features = ["unproven"], version = "0.2.7" }
fugit = "0.3.6"
fugit-timer = "0.1.3"
rtic-monotonic = { version = "1.0", optional = true }
bitflags = "1.3.2"

[dependencies.stm32-usbd]
version = "0.6.0"
optional = true

[dev-dependencies]
panic-halt = "0.2.0"
panic-semihosting = "0.6.0"
panic-itm = "0.4.2"
cortex-m-rtic = "1.1.3"
cortex-m-semihosting = "0.5.0"
heapless = "0.7.16"
mfrc522 = "0.3.0"
usb-device = "0.2.8"
usbd-serial = "0.1.1"
unwrap-infallible = "0.1.5"

[features]
device-selected = []
doc = []
rt = ["stm32f1/rt"]
stm32f100 = ["stm32f1/stm32f100", "device-selected"]
stm32f101 = ["stm32f1/stm32f101", "device-selected"]
stm32f103 = ["stm32f1/stm32f103", "device-selected", "has-can", "stm32-usbd"]
stm32f105 = ["stm32f1/stm32f107", "device-selected", "connectivity"]
stm32f107 = ["stm32f1/stm32f107", "device-selected", "connectivity"]

# Devices with 64 or 128 Kb ROM
medium = []
# Devices with 256 or 512 Kb ROM
high = ["medium"]
# Devices with 768 Kb ROM or more
xl = ["high"]
# Connectivity line devices (`stm32f105xx` and `stm32f107xx`)
connectivity = ["medium", "has-can"]
# Devices with CAN interface
has-can = []

rtic = ["rt", "rtic-monotonic"]

[profile.dev]
incremental = false
codegen-units = 1

[profile.release]
codegen-units = 1
debug = true
lto = true

[[example]]
name = "usb_serial"
required-features = ["rt", "stm32-usbd"]

[[example]]
name = "usb_serial_interrupt"
required-features = ["rt", "stm32-usbd"]

[[example]]
name = "usb_serial_rtic"
required-features = ["rt", "stm32-usbd"]

[[example]]
name = "blinky_timer_irq"
required-features = ["rt"]

[[example]]
name = "blinky_rtcalarm_irq"
required-features = ["rt"]

[[example]]
name = "qei"
required-features = ["medium"]

[[example]]
name = "timer-interrupt-rtic"
required-features = ["rt", "medium"]

[[example]]
name = "exti"
required-features = ["rt"]

[[example]]
name = "can-echo"
required-features = ["has-can"]

[[example]]
name = "can-loopback"
required-features = ["has-can"]

[[example]]
name = "can-rtic"
required-features = ["has-can", "rt"]

[[example]]
name = "gpio_input"
required-features = ["stm32f103"]

[[example]]
name = "serial-interrupt-idle"
required-features = ["stm32f103", "rt", "medium"]
