[package]
edition = "2021"
rust-version = "1.59"

authors = ["Jorge Aparicio <jorge@japaric.io>", "Daniel Egger <daniel@eggers-club.de>"]
categories = ["embedded", "hardware-support", "no-std"]
description = "HAL for the STM32F1xx family of microcontrollers"
keywords = ["arm", "cortex-m", "stm32", "hal"]
license = "MIT OR Apache-2.0"
name = "stm32f1xx-hal"
repository = "https://github.com/stm32-rs/stm32f1xx-hal"
documentation = "https://docs.rs/stm32f1xx-hal"
readme = "README.md"
version = "0.10.0"

[package.metadata.docs.rs]
features = ["stm32f103", "rtic", "high"]
default-target = "x86_64-unknown-linux-gnu"

[dependencies]
cortex-m = "0.7.6"
cortex-m-rt = "0.7.1"
nb = "1.1"
embedded-dma = "0.2.0"
bxcan = "0.7"
void = { default-features = false, version = "1.0.2" }
fugit = "0.3.7"
fugit-timer = "0.1.3"
rtic-monotonic = { version = "1.0", optional = true }
bitflags = "1.3.2"
vcell = "0.1.3"

[dependencies.stm32f1]
package = "stm32f1-staging"
version = "0.16.0"
features = ["atomics"]

[dependencies.embedded-hal-02]
package = "embedded-hal"
version = "0.2.7"
features = ["unproven"]

[dependencies.embedded-hal]
version = "1.0"

[dependencies.embedded-hal-nb]
version = "1.0"

[dependencies.embedded-io]
version = "0.6.1"

[dependencies.stm32-usbd]
version = "0.7.0"
optional = true

[dev-dependencies]
panic-halt = "0.2.0"
panic-semihosting = "0.6.0"
panic-itm = "0.4.2"
cortex-m-rtic = "1.1.3"
cortex-m-semihosting = "0.5.0"
heapless = "0.7.16"
mfrc522 = "0.5.0"
usb-device = "0.3.2"
usbd-serial = "0.2.2"

[features]
doc = []
stm32f100 = ["stm32f1/stm32f100"]
stm32f101 = ["stm32f1/stm32f101"]
stm32f103 = ["stm32f1/stm32f103", "has-can", "stm32-usbd"]
stm32f105 = ["stm32f1/stm32f107", "connectivity"]
stm32f107 = ["stm32f1/stm32f107", "connectivity"]

defmt = ["stm32f1/defmt"]

# Devices with 64 or 128 Kb ROM
medium = []
# Devices with 256 or 512 Kb ROM
high = ["medium", "has-dac"]
# Devices with 768 Kb ROM or more
xl = ["high"]
# Connectivity line devices (`stm32f105xx` and `stm32f107xx`)
connectivity = ["medium", "has-can", "has-dac"]
# Devices with CAN interface
has-can = []
# Devices with Dac
has-dac = []

rtic = ["rtic-monotonic"]

[profile.dev]
incremental = false
codegen-units = 1

[profile.release]
codegen-units = 1
debug = true
lto = true

[[example]]
name = "usb_serial"
required-features = ["stm32-usbd"]

[[example]]
name = "usb_serial_interrupt"
required-features = ["stm32-usbd"]

[[example]]
name = "usb_serial_rtic"
required-features = ["stm32-usbd"]

[[example]]
name = "blinky_timer_irq"
required-features = []

[[example]]
name = "blinky_rtcalarm_irq"
required-features = []

[[example]]
name = "qei"
required-features = ["medium"]

[[example]]
name = "timer-interrupt-rtic"
required-features = ["stm32f103", "medium"]

[[example]]
name = "exti"
required-features = []

[[example]]
name = "can-echo"
required-features = ["has-can"]

[[example]]
name = "can-loopback"
required-features = ["has-can"]

[[example]]
name = "can-rtic"
required-features = ["has-can"]

[[example]]
name = "gpio_input"
required-features = ["stm32f103"]

[[example]]
name = "serial-interrupt-idle"
required-features = ["stm32f103", "medium"]
