[package]
edition = "2021"
rust-version = "1.59"

authors = [
    "Jorge Aparicio <jorge@japaric.io>",
    "Daniel Egger <daniel@eggers-club.de>",
]
categories = ["embedded", "hardware-support", "no-std"]
description = "HAL for the STM32F1xx family of microcontrollers"
keywords = ["arm", "cortex-m", "stm32", "hal"]
license = "MIT OR Apache-2.0"
name = "stm32f1xx-hal"
repository = "https://github.com/stm32-rs/stm32f1xx-hal"
documentation = "https://docs.rs/stm32f1xx-hal"
readme = "README.md"
version = "0.11.0"

[package.metadata.docs.rs]
features = ["stm32f103", "rtic1", "high"]
default-target = "x86_64-unknown-linux-gnu"

[dependencies]
defmt = { version = "1.0", optional = true }
cortex-m = { version = "0.7.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7.5"
nb = "1.1"
embedded-dma = "0.2.0"
bxcan = "0.8.0"
void = { default-features = false, version = "1.0.2" }
fugit = "0.3.9"
fugit-timer = "0.1.3"
bitflags = "1.3.2"
vcell = "0.1.3"
# rtic1
rtic-monotonic = { version = "1.0", optional = true }
systick-monotonic = { version = "1.0.1", optional = true }
cortex-m-rtic = { version = "1.1.4", features = [
    "test-critical-section",
], optional = true }
# rtic2
rtic-time = { version = "2.0.1", optional = true }
embedded-hal-async = { version = "1.0", optional = true }
rtic = { version = "2.2", features = ["thumbv7-backend"], optional = true }
atomic-polyfill = { version = "1.0.3", optional = true }

[dependencies.stm32f1]
version = "0.16.0"
features = ["atomics"]

[dependencies.embedded-hal-02]
package = "embedded-hal"
version = "0.2.7"
features = ["unproven"]

[dependencies.embedded-hal]
version = "1.0"

[dependencies.embedded-hal-nb]
version = "1.0"

[dependencies.embedded-io]
version = "0.6.1"

[dependencies.stm32-usbd]
version = "0.8.0"
optional = true

[dev-dependencies]
defmt-rtt = "1.0"
panic-halt = "1.0.0"
panic-semihosting = "0.6.0"
panic-itm = "0.4.2"
panic-probe = "1.0"
rtt-target = "0.6.1"
cortex-m-semihosting = "0.5.0"
heapless = "0.9.1"
mfrc522 = { version = "0.8.0", features = ["eh02"] }
mpu9250 = "0.25.0"
usb-device = "0.3.2"
usbd-serial = "0.2.2"

[features]
doc = []
stm32f100 = ["stm32f1/stm32f100"]
stm32f101 = ["stm32f1/stm32f101"]
stm32f103 = ["stm32f1/stm32f103", "has-can", "stm32-usbd"]
stm32f105 = ["stm32f1/stm32f107", "connectivity"]
stm32f107 = ["stm32f1/stm32f107", "connectivity"]

defmt = ["dep:defmt", "stm32f1/defmt"]

# Devices with 64 or 128 Kb ROM
medium = []
# Devices with 256 or 512 Kb ROM
high = ["medium", "has-dac"]
# Devices with 768 Kb ROM or more
xl = ["high"]
# Connectivity line devices (`stm32f105xx` and `stm32f107xx`)
connectivity = ["medium", "has-can", "has-dac"]
# Devices with CAN interface
has-can = []
# Devices with Dac
has-dac = []

## Support monotonic timers and other stuff that can be used by [RTICv1 framework](https://crates.io/crates/cortex-m-rtic)
rtic1 = ["dep:rtic-monotonic", "dep:systick-monotonic", "cortex-m-rtic"]

## Support monotonic timers and other stuff that can be used by [RTICv2 framework](https://crates.io/crates/rtic)
##
## Requires one of `rtic-timX` features also be enabled
rtic2 = [
    "dep:rtic-time",
    "dep:rtic",
    "dep:atomic-polyfill",
    "dep:embedded-hal-async",
]
rtic-tim2 = []
rtic-tim3 = []
rtic-tim4 = []
rtic-tim5 = []

[profile.dev]
incremental = false
codegen-units = 1

[profile.release]
codegen-units = 1
debug = true
lto = true

[[example]]
name = "usb_serial"
required-features = ["stm32f103", "stm32-usbd"]

[[example]]
name = "usb_serial_interrupt"
required-features = ["stm32f103", "stm32-usbd"]

[[example]]
name = "usb_serial_rtic"
required-features = ["stm32f103", "stm32-usbd", "rtic1"]

[[example]]
name = "blinky_timer_irq"
required-features = []

[[example]]
name = "blinky_rtcalarm_irq"
required-features = []

[[example]]
name = "qei"
required-features = ["medium"]

[[example]]
name = "timer-interrupt-rtic"
required-features = ["stm32f103", "medium", "rtic1"]

[[example]]
name = "exti"
required-features = []

[[example]]
name = "exti_rtic"
required-features = ["rtic1"]

[[example]]
name = "can-echo"
required-features = ["has-can"]

[[example]]
name = "can-loopback"
required-features = ["has-can"]

[[example]]
name = "can-rtic"
required-features = ["has-can", "rtic1"]

[[example]]
name = "gpio_input"
required-features = ["stm32f103"]

[[example]]
name = "serial-interrupt-idle"
required-features = ["stm32f103", "medium"]

[[example]]
name = "rtic2-tick"
required-features = ["rtic2", "rtic-tim3", "defmt"]
